# pytest-docker-ci-example

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: main.yml
docs/: index.md
search/: search_index.json
src/pytest_docker_ci_example/: __init__.py
tests/: docker-compose.yml  test_main.py
