[tool.poetry]
name = "pytest-docker-ci-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest-docker = "^0.10.3"
requests = "^2.26.0"
pytest = "^6.2.5"
mkdocs = "^1.2.2"
mkdocs-material = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
